# stepDetection_simplified

./: .gitignore  CMakeLists.txt  README.md
cmake/: OpenCV.cmake  OpenMVG.cmake
projects/demo/: trackingTargetPosition.txt
src/: FootPrint.cpp  FootPrint.h  main.cpp
src/basicFunction/: CMakeLists.txt  basicFunction.cpp  basicFunction.h
src/basicFunction/openpose/: CMakeLists.txt  myOpenPose.cpp  myOpenPose.h  openPosePerson.h
